2008-10-09  vadim  <vadim@vk.crocodile.org>

	* instDialog_compile.cpp (instDialog::prepareArgForCompiler):
	always provide "-o" command line option to compilers when calling
	them from the GUI. The output file name defined this way can be
	encoded properly for the OS encoding and locale (compilers do not
	use QT so it is hard to do there).

2008-10-08  vadim  <vadim@vk.crocodile.org>

	* merged branch "new-installer" -r569:HEAD

	* PrefsDialog.cpp (PrefsDialog::accept): Added GUI control for the
	path to scp utility used by built-in policy installer

	* All compilers: firewall object can be specified by its ID in
	addition to by name. Command line option "-i" tells compiler that
	the last parameter of the command line is object ID. This works
	reliably when firewall object name contains non-ascii characters
	and the program runs under locale using 8 bit characters. Built-in
	installer now uses this method while calling all policy compilers.

2008-10-07  vadim  <vadim@vk.crocodile.org>

	* pf.cpp, ipf.cpp: Policy compilers for pf and ipf use file name
	and path specified with "-o" command line option for the name and
	path for all .fw and .conf files they generate.

	* instDialog.cpp: built-in installer finds all generated files
	when user specifies alternative name (possibly full path) for the
	generated script.

	* FirewallInstaller.cpp (FirewallInstaller::getGeneratedFileFullPath):
	built-in installer works properly when firewall name contains
	non-english characters. In this case generated firewall script
	also has name that contains non-english characters.

	* FWWindowPrint.cpp, RuleSetView.cpp, FWBSettings.h,
	ProjectPanel_state_ops.cpp: got rid of references to
	InterfacePolicy class; build fixes for FreeBSD 7 (should fix
	compile problems on other systems too, such as Solaris)

2008-10-06  vadim  <vadim@vk.crocodile.org>

	* SSHPIX.cpp (SSHPIX::stateMachine): fixed crash in built-in
	installer that happened when existing PIX configuration was saved