@@ -1,5 +1,15 @@
 2008-10-09  vadim  <vadim@vk.crocodile.org>
 
+	* ipt.cpp (main): Compiler for iptables uses QT functions to
+	properly process non-ascii file names and firewall object
+	names. Compiler correctly creates generated script when its file
+	name contains non-ascii characters on Linux and Mac OS X. The GUI
+	can find the file and built-in installer can copy it to the
+	firewall and activate it there. QT helps manage encodings and
+	locales in OS-independent manner. However dependency on QT
+	libraries means compilers can not be deployed on the firewall
+	separately from the GUI.
+
 	* instDialog_compile.cpp (instDialog::prepareArgForCompiler):
 	always provide "-o" command line option to compilers when calling
 	them from the GUI. The output file name defined this way can be
